// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput can change label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="FileInputContent-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-6 py-0 px-3"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Upload File
        </span>
      </button>
      <input
        class="FileInputContent-nativeInput"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`FileInput renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="FileInputContent-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-6 py-0 px-3"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Choose File
        </span>
      </button>
      <input
        class="FileInputContent-nativeInput"
        type="file"
      />
    </div>
  </div>
</div>
`;
